fixed line 7 and 13

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <title>IIT Tech Scholar</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
-  <link rel="icon" type="image/png" sizes="32x32" href="media/hawk.PNG">
+  <link rel="icon" type="image/png" sizes="32x32" href="media/hawk.png">
   <link rel = "stylesheet" type = "text/css" href="css/screen.css" >
   <link rel = "stylesheet" type = "text/css" href="css/style.css" >
   <script src = "js/site.js"></script>
 </head>
 <body>
-  <img id = "logo" src = "media/hawk.PNG" alt = "image" />
+  <img id = "logo" src = "media/hawk.png" alt = "image" />
   <form method = "get" action="#null" onsubmit = "return checkForm(this)">
 
     <fieldset>
