Made changes to line 17(changed legend tag to header 1 tag)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <form method = "get" action="#null" onsubmit = "return checkForm(this)">
 
     <fieldset>
-      <legend>Sign Up For Illinois Tech Scholar</legend>
+      <h1>Sign Up For Illinois Tech Scholar</h1>
       <div>
         <label>Name:</label>
         <input type = "text" name = "Name" placeholder = "Enter Your Name">
