--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <img id = "logo" src = "media/hawk.png" alt = "image" />
-  <form method = "get" action="#null" onsubmit = "return checkForm(this)">
+  <form method = "get" action="#null" autocomplete="on" onsubmit = "return checkForm(this)">
 
     <fieldset>
       <h1>Sign Up For Illinois Tech Scholar</h1>
