--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </p>
         <div id="submit">
           <p>
-            <input type = "submit" id="click" value= "Submit" onclick="checkbox()">
+            <input type = "submit" id="click" value= "Join Now" onclick="checkbox()">
           </p>
         </div>
       </div>
