--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div>
         <label>E-mail:</label>
-        <input type = "email" name = "user_email_field" placeholder = "user@example.com">
+        <input type = "text" name = "user_email_field" placeholder = "user@example.com">
       </div>
       <div>
         <label>Phone Number:</label>
